--- a/app/templates/app/see_data.html
+++ b/app/templates/app/see_data.html
@@ -1,44 +1,261 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <h1>Hello, {{ user.username|default:'Guest' }}</h1>
+    {% if user.is_authenticated %}
+        <div class="col d-flex justify-content-center">
+            <div class="card w-50 d-none d-sm-flex"> <!-- show normally on md and above -->
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <!-- Container wrapper -->
+                    <div class="container-fluid">
+                        <!-- Toggle button -->
+                        <button
+                                class="navbar-toggler"
+                                type="button"
+                                data-mdb-toggle="collapse"
+                                data-mdb-target="#navbarCenteredExample"
+                                aria-controls="navbarCenteredExample"
+                                aria-expanded="false"
+                                aria-label="Toggle navigation"
+                        >
+                            <i class="fas fa-bars"></i>
+                        </button>
 
-    <p> Welcome to the site</p>
-    <div>
-        {% if user.is_authenticated %}
+                        <!-- Collapsible wrapper -->
+                        <div
+                                class="collapse navbar-collapse justify-content-center"
+                                id="navbarCenteredExample"
+                        >
+                            <!-- Left links -->
+                            <ul class="navbar-nav mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page"
+                                       href="{% url 'see_data' %}">Journeys</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'see_goals' %}">Goals</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Settings</a>
+                                </li>
+                            </ul>
+                            <!-- Left links -->
+                        </div>
+                        <!-- Collapsible wrapper -->
+                    </div>
+                    <!-- Container wrapper -->
+                </nav>
+                <div class="justify-content-center" align="center">
+                    <div class="row">
+                    </div>
 
-            <table class="table table-striped table-bordered table-sm">
-                <thead class="thead-dark">
-                <tr>
-                    <th>Origin</th>
-                    <th>Destination</th>
-                    <th>Price</th>
-                    <th>Date</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for item in journeys %}
-                    <tr>
-                        <td>{{ item.origin }}</td>
-                        <td>{{ item.destination }}</td>
-                        <td>{{ item.price }}</td>
-                        <td>{{ item.date }}</td>
-                        <script>
-                            function askok(e) {
-                                if(!confirm('Are you sure you want to delete this?')) e.preventDefault();
-                                return
-                            }
-                        </script>
-                        <td>
-                            <a onclick="askok(event);" href="/delete_journey/{{ item.id }} "><i class="bi-trash"></i></a>
-                        </td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        {% else %}
-            <a href="{% url 'login' %}">Login</a>
-        {% endif %}
-    </div>
+                    <table class="table table-striped table-bordered table-sm">
+                        <thead class="thead-dark">
+                        <tr>
+                            <th>Origin</th>
+                            <th>Destination</th>
+                            <th>Price</th>
+                            <th>Date</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for item in journeys %}
+                            <tr>
+                                <td>{{ item.origin }}</td>
+                                <td>{{ item.destination }}</td>
+                                <td>{{ item.price }}</td>
+                                <td>{{ item.date|date:'d.m.y' }}</td>
+                                <script>
+                                    function askok(e) {
+                                        if (!confirm('Are you sure you want to delete this?')) e.preventDefault();
+                                        return
+                                    }
+                                </script>
+                                <td>
+                                    <a class="btn btn-rounded btn-outline" onclick="askok(event);" href="/delete_journey/{{ item.id }} ">
+                                        <i class="bi-trash"></i>
+                                    </a>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+
+                    <div class="btn-group sticky-bottom p-5 shadow-none">
+                        <a href="{% url 'addjourney' %}" type="button" class="btn btn-danger btn-rounded">
+                            <i class="fas fa-plus mr-1"></i>
+                            ADD
+                        </a>
+                        <a href="{% url 'upload_journeys' %}" type="button" class="btn btn-primary btn-rounded">
+                            <i class="fas fa-upload mr-1"></i>
+                            ADD
+                        </a>
+                    </div>
+
+                    <div>
+                        <a href="{% url 'logout' %}">Logout</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card w-100 d-sm-none">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <!-- Container wrapper -->
+                    <div class="container-fluid">
+                        <!-- Toggle button -->
+                        <button
+                                class="navbar-toggler"
+                                type="button"
+                                data-mdb-toggle="collapse"
+                                data-mdb-target="#navbarCenteredExample"
+                                aria-controls="navbarCenteredExample"
+                                aria-expanded="false"
+                                aria-label="Toggle navigation"
+                        >
+                            <i class="fas fa-bars"></i>
+                        </button>
+
+                        <!-- Collapsible wrapper -->
+                        <div
+                                class="collapse navbar-collapse justify-content-center"
+                                id="navbarCenteredExample"
+                        >
+                            <!-- Left links -->
+                            <ul class="navbar-nav mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page"
+                                       href="{% url 'see_data' %}">Journeys</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'see_goals' %}">Goals</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Settings</a>
+                                </li>
+                            </ul>
+                            <!-- Left links -->
+                        </div>
+                        <!-- Collapsible wrapper -->
+                    </div>
+                    <!-- Container wrapper -->
+                </nav>
+                <div class="justify-content-center" align="center">
+                    <div class="row">
+                        <br>
+                    </div>
+                    <table class="table table-striped table-bordered table-sm">
+                        <thead class="thead-dark">
+                        <tr>
+                            <th>Origin</th>
+                            <th>Destination</th>
+                            <th>Price</th>
+                            <th>Date</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for item in journeys %}
+                            <tr>
+                                <td>{{ item.origin }}</td>
+                                <td>{{ item.destination }}</td>
+                                <td>{{ item.price }}</td>
+                                <td>{{ item.date|date:'d.m.y' }}</td>
+                                <script>
+                                    function askok(e) {
+                                        if (!confirm('Are you sure you want to delete this?')) e.preventDefault();
+                                        return
+                                    }
+                                </script>
+                                <td>
+                                    <a class="btn btn-rounded btn-outline" onclick="askok(event);" href="/delete_journey/{{ item.id }} ">
+                                        <i class="bi-trash"></i>
+                                    </a>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                    <div class="btn-group sticky-bottom p-5 shadow-none">
+                        <a href="{% url 'addjourney' %}" type="button" class="btn btn-danger btn-rounded">
+                            <i class="fas fa-plus mr-1"></i>
+                            ADD
+                        </a>
+                        <a href="{% url 'upload_journeys' %}" type="button" class="btn btn-primary btn-rounded">
+                            <i class="fas fa-upload mr-1"></i>
+                            ADD
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    {% else %}
+
+        <br class="mt-0 mb-4">
+        <div class="container">
+            <div class="global-container">
+                <div class="card login-form">
+                    <div class="card-body">
+                        <h3 class="card-title text-center">Welcome to the KlimaticketR</h3>
+                        <div class="card-text">
+                            <a class="btn btn-block btn-rounded btn-outline-primary" href="{% url 'login' %}">Login</a>
+                            <a class="btn btn-block btn-rounded btn-primary" href="{% url 'signup' %}">Register</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <style>
+            html, body {
+                height: 100%;
+                background-color: #f5f5f5;
+            }
+
+            .global-container {
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                /* background-color: #f5f5f5; */
+            }
+
+            form {
+                padding-top: 10px;
+                font-size: 14px;
+                margin-top: 30px;
+            }
+
+            .card-title {
+                font-weight: 300;
+            }
+
+            .btn {
+                font-size: 14px;
+                margin-top: 20px;
+            }
+
+
+            .login-form {
+                width: 330px;
+                margin: 20px;
+            }
+
+            .sign-up {
+                text-align: center;
+                padding: 20px 0 0;
+            }
+
+            .alert {
+                margin-bottom: -30px;
+                font-size: 13px;
+                margin-top: 20px;
+            }
+        </style>
+
+    {% endif %}
 
 {% endblock %}
