--- a/app/templates/app/see_goals.html
+++ b/app/templates/app/see_goals.html
@@ -31,8 +31,10 @@
                                     <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" aria-current="page"
-                                       href="{% url 'see_data' %}">Journeys</a>
+                                    <a class="nav-link" aria-current="page" href="{% url 'insights' %}">Insights</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="{% url 'see_data' %}">Journeys</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link active" href="{% url 'see_goals' %}">Goals</a>
@@ -98,7 +100,7 @@
                     </table>
 
                     <div class="btn-group sticky-bottom p-5 shadow-none">
-                        <a href="{% url 'addjourney' %}" type="button" class="btn btn-danger btn-rounded">
+                        <a href="{% url 'addgoal' %}" type="button" class="btn btn-danger btn-rounded">
                             <i class="fas fa-plus mr-1"></i>
                             ADD
                         </a>
@@ -137,8 +139,10 @@
                                     <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" aria-current="page"
-                                       href="{% url 'see_data' %}">Journeys</a>
+                                    <a class="nav-link" aria-current="page" href="{% url 'insights' %}">Insights</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="{% url 'see_data' %}">Journeys</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link active" href="{% url 'see_goals' %}">Goals</a>
@@ -203,7 +207,7 @@
                         </tbody>
                     </table>
                     <div class="btn-group sticky-bottom p-5 shadow-none">
-                        <a href="{% url 'addjourney' %}" type="button" class="btn btn-danger btn-rounded">
+                        <a href="{% url 'addgoal' %}" type="button" class="btn btn-danger btn-rounded">
                             <i class="fas fa-plus mr-1"></i>
                             ADD
                         </a>
