--- a/app/templates/app/addgoal.html
+++ b/app/templates/app/addgoal.html
@@ -2,32 +2,217 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
-    <h1>Hello, {{ user.username }}</h1>
+    <div class="col d-flex justify-content-center">
+        <div class="card w-50 d-none d-sm-flex"> <!-- show normally on md and above -->
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <!-- Container wrapper -->
+                <div class="container-fluid">
+                    <!-- Toggle button -->
+                    <button
+                            class="navbar-toggler"
+                            type="button"
+                            data-mdb-toggle="collapse"
+                            data-mdb-target="#navbarCenteredExample"
+                            aria-controls="navbarCenteredExample"
+                            aria-expanded="false"
+                            aria-label="Toggle navigation"
+                    >
+                        <i class="fas fa-bars"></i>
+                    </button>
 
-    <p> Please add your Goal </p>
-    <div class="container">
-        <form method="post">
-            {% csrf_token %}
-            <div class="form-group">
-                {{ form.name|as_crispy_field }}
+                    <!-- Collapsible wrapper -->
+                    <div
+                            class="collapse navbar-collapse justify-content-center"
+                            id="navbarCenteredExample"
+                    >
+                        <!-- Left links -->
+                        <ul class="navbar-nav mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="{% url 'insights' %}">Insights</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="{% url 'see_data' %}">Journeys</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'see_goals' %}">Goals</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Settings</a>
+                            </li>
+                        </ul>
+                        <!-- Left links -->
+                    </div>
+                    <!-- Collapsible wrapper -->
+                </div>
+                <!-- Container wrapper -->
+            </nav>
+            <div class="justify-content-center">
+                <div class="row mt-3" align="center">
+                    <h2 class="align-center"> Please enter your new goal:</h2>
+                </div>
+
+                <div class="row">
+                    <div class="container px-5 pb-5">
+                        <form method="post">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                {{ form.name|as_crispy_field }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.type|as_crispy_field }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.criteria|as_crispy_field }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.startdate|as_crispy_field }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.enddate|as_crispy_field }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.is_main|as_crispy_field }}
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                {{ form.type|as_crispy_field }}
+        </div>
+        <div class="card w-100 d-sm-none">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <!-- Container wrapper -->
+                <div class="container-fluid">
+                    <!-- Toggle button -->
+                    <button
+                            class="navbar-toggler"
+                            type="button"
+                            data-mdb-toggle="collapse"
+                            data-mdb-target="#navbarCenteredExample"
+                            aria-controls="navbarCenteredExample"
+                            aria-expanded="false"
+                            aria-label="Toggle navigation"
+                    >
+                        <i class="fas fa-bars"></i>
+                    </button>
+
+                    <!-- Collapsible wrapper -->
+                    <div
+                            class="collapse navbar-collapse justify-content-center"
+                            id="navbarCenteredExample"
+                    >
+                        <!-- Left links -->
+                        <ul class="navbar-nav mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="{% url 'see_data' %}">Journeys</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'see_goals' %}">Goals</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Settings</a>
+                            </li>
+                        </ul>
+                        <!-- Left links -->
+                    </div>
+                    <!-- Collapsible wrapper -->
+                </div>
+                <!-- Container wrapper -->
+            </nav>
+            <div class="justify-content-center" align="center">
+                <div class="row">
+                    <br>
+                </div>
+
+                <div class="row">
+                    <div class="container px-5 pb-5">
+                        <form method="post">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                {{ form.name|as_crispy_field }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.type|as_crispy_field }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.criteria|as_crispy_field }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.startdate|as_crispy_field }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.enddate|as_crispy_field }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.is_main|as_crispy_field }}
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                    </div>
+                </div>
+
             </div>
-            <div class="form-group">
-                {{ form.criteria|as_crispy_field }}
-            </div>
-            <div class="form-group">
-                {{ form.startdate|as_crispy_field }}
-            </div>
-            <div class="form-group">
-                {{ form.enddate|as_crispy_field }}
-            </div>
-            <div class="form-group">
-                {{ form.is_main|as_crispy_field}}
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+        </div>
+
     </div>
+    <script>
+        let fact = 1.1;
+        var val = {{ progress__ }};
+        var max = 100;
+        if (val > 100) max = val * fact;
+
+        var maingoalprog = c3.generate({
+            bindto: '.chart_prog',
+            data: {
+                columns: [['progress', val]],
+                type: 'gauge'
+            },
+            gauge: {
+                label: {
+                    format: function (value, ratio) {
+                        return value + '%'; //returning here the value and not the ratio
+                    }
+                },
+                max: max
+            },
+            color: {
+                pattern: ['red', 'yellow', 'orange', 'green'],
+                threshold: {
+                    values: [50, 75, 100]
+                }
+            }
+        })
+
+        var valm = {{ progress__ }};
+        var maxm = 100;
+        if (val > 100) maxm = val * fact;
+        var maingoalprogm = c3.generate({
+            bindto: '.chart_progm',
+            data: {
+                columns: [['progress', valm]],
+                type: 'gauge'
+            },
+            gauge: {
+                label: {
+                    format: function (value, ratio) {
+                        return value + '%'; //returning here the value and not the ratio
+                    }
+                },
+                max: maxm
+            },
+            color: {
+                pattern: ['red', 'yellow', 'orange', 'green'],
+                threshold: {
+                    values: [50, 75, 100]
+                }
+            }
+        })
+    </script>
 
 {% endblock %}
