--- a/app/templates/app/addjourney.html
+++ b/app/templates/app/addjourney.html
@@ -1,27 +1,153 @@
 {% extends 'base.html' %}
-{% block content %}
 {% load crispy_forms_tags %}
+{% block content %}
 
-    <h1>Hello, {{ user.username }}</h1>
+    <div class="col d-flex justify-content-center">
+        <div class="card w-50 d-none d-sm-flex"> <!-- show normally on md and above -->
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <!-- Container wrapper -->
+                <div class="container-fluid">
+                    <!-- Toggle button -->
+                    <button
+                            class="navbar-toggler"
+                            type="button"
+                            data-mdb-toggle="collapse"
+                            data-mdb-target="#navbarCenteredExample"
+                            aria-controls="navbarCenteredExample"
+                            aria-expanded="false"
+                            aria-label="Toggle navigation"
+                    >
+                        <i class="fas fa-bars"></i>
+                    </button>
 
-    <p> Please add your Journey </p>
-    <div class="container">
-        <form method="post">
-          {% csrf_token %}
-          <div class="form-group">
-            {{ form.origin|as_crispy_field }}
-          </div>
-          <div class="form-group">
-            {{ form.destination|as_crispy_field }}
-          </div>
-          <div class="form-group">
-            {{ form.price|as_crispy_field }}
-          </div>
-          <div class="form-group">
-            {{ form.date|as_crispy_field }}
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+                    <!-- Collapsible wrapper -->
+                    <div
+                            class="collapse navbar-collapse justify-content-center"
+                            id="navbarCenteredExample"
+                    >
+                        <!-- Left links -->
+                        <ul class="navbar-nav mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="{% url 'insights' %}">Insights</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="{% url 'see_data' %}">Journeys</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'see_goals' %}">Goals</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Settings</a>
+                            </li>
+                        </ul>
+                        <!-- Left links -->
+                    </div>
+                    <!-- Collapsible wrapper -->
+                </div>
+                <!-- Container wrapper -->
+            </nav>
+            <div class="justify-content-center">
+                <div class="row mt-3" align="center">
+                    <h2 class="align-center"> Please enter your new Journey:</h2>
+                </div>
+
+                <div class="row">
+                    <div class="container px-5 pb-5">
+                        <form method="post">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                {{ form.origin|as_crispy_field }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.destination|as_crispy_field }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.price|as_crispy_field }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.date|as_crispy_field }}
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card w-100 d-sm-none">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <!-- Container wrapper -->
+                <div class="container-fluid">
+                    <!-- Toggle button -->
+                    <button
+                            class="navbar-toggler"
+                            type="button"
+                            data-mdb-toggle="collapse"
+                            data-mdb-target="#navbarCenteredExample"
+                            aria-controls="navbarCenteredExample"
+                            aria-expanded="false"
+                            aria-label="Toggle navigation"
+                    >
+                        <i class="fas fa-bars"></i>
+                    </button>
+
+                    <!-- Collapsible wrapper -->
+                    <div
+                            class="collapse navbar-collapse justify-content-center"
+                            id="navbarCenteredExample"
+                    >
+                        <!-- Left links -->
+                        <ul class="navbar-nav mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="{% url 'see_data' %}">Journeys</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'see_goals' %}">Goals</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Settings</a>
+                            </li>
+                        </ul>
+                        <!-- Left links -->
+                    </div>
+                    <!-- Collapsible wrapper -->
+                </div>
+                <!-- Container wrapper -->
+            </nav>
+            <div class="justify-content-center" align="center">
+                <div class="row">
+                    <br>
+                </div>
+
+                <div class="row">
+                    <div class="container px-5 pb-5">
+                        <form method="post">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                {{ form.origin|as_crispy_field }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.destination|as_crispy_field }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.price|as_crispy_field }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.date|as_crispy_field }}
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
     </div>
 
 {% endblock %}
