--- a/templates/base.html
+++ b/templates/base.html
@@ -23,10 +23,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.js" integrity="sha512-+IpCthlNahOuERYUSnKFjzjdKXIbJ/7Dd6xvUp+7bEw0Jp2dg6tluyxLs+zq9BMzZgrLv8886T4cBSqnKiVgUw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 </head>
-<body>
+<body style="background-color: #bbe0b8;">
 {% block content %}
-
 {% endblock %}
+
 
 <!-- MDB -->
 <script
