--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -39,9 +39,6 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'see_goals' %}">Goals</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Settings</a>
-                                </li>
                             </ul>
                             <!-- Left links -->
                         </div>
@@ -54,24 +51,31 @@
                     <div class="row">
                     </div>
 
-                    <h2> Your progress on your main goal:</h2>
+                    {% if has_main %}
 
-                    <div class="row">
-                        <div class="chart_prog"></div>
-                    </div>
+                        <h2> Your progress on your main goal:</h2>
 
-                    <div class="row">
-                        <br>
-                        <p>{{ maingoal.name }} of type: {{ maingoal.type }} <br>
-                            to reach {{ maingoal.criteria }}
-                            {% if is_fq %}
-                                Journeys
-                            {% else %}
-                                € in travel costs
-                            {% endif %} <br>
-                            between {{ maingoal.startdate|date:'d.m.y' }} and {{ maingoal.enddate|date:'d.m.y' }} <br>
-                        </p>
-                    </div>
+                        <div class="chart_progm">
+                        </div>
+
+                        <div class="row">
+                            <br>
+                            <p>{{ maingoal.name }} of type: {{ maingoal.type }} <br>
+                                to reach {{ maingoal.criteria }}
+                                {% if is_fq %}
+                                    Journeys
+                                {% else %}
+                                    € in travel costs
+                                {% endif %} <br>
+                                between {{ maingoal.startdate|date:'d.m.y' }} and {{ maingoal.enddate|date:'d.m.y' }} <br>
+                            </p>
+                        </div>
+
+                    {% else %}
+
+                        <h2> Please set a main goal to display on your home screen</h2>
+
+                    {%  endif %}
 
                     <div class="row">
                         <div class="container p-2">
@@ -120,9 +124,6 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'see_goals' %}">Goals</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Settings</a>
-                                </li>
                             </ul>
                             <!-- Left links -->
                         </div>
@@ -134,6 +135,8 @@
                     <div class="row">
                         <br>
                     </div>
+
+                    {% if has_main %}}
 
                     <h2> Your progress on your main goal:</h2>
 
@@ -152,6 +155,12 @@
                             between {{ maingoal.startdate|date:'d.m.y' }} and {{ maingoal.enddate|date:'d.m.y' }} <br>
                         </p>
                     </div>
+
+                    {% else %}
+
+                     <h2> Please set a main goal to display on your home screen</h2>
+
+                    {%  endif %}
 
                     <div class="row">
                         <div class="container p-2">
